maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:52: error: not enough arguments for method numeroterLesCases: (X: Int, Y: Int, cpt: Int)Unit.
Unspecified value parameter cpt.
    numeroterLesCases(X,Y-1)
                     ^JediEscaper:56: error: not enough arguments for method numeroterLesCases: (X: Int, Y: Int, cpt: Int)Unit.
Unspecified value parameter cpt.
    numeroterLesCases(X-1,Y)
                     ^