maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var X = trouverXBiscuit()
  var Y = trouverYBiscuit()
  setIndication(X,Y,0)
  numeroterLesCases(X,Y,0)
    // Your code here
}

def trouverXBiscuit():Int=
{
  var X = 0
  var Y = 0
  while ((X,Y)!=(getMondeLargeur()-1,getMondeHauteur()-1) && !aBiscuit(X,Y))
         {
           if (X<getMondeLargeur()-1)
           {
             X+=1
           }
           else
           {
             X=0
             Y+=1
           }
         }
  return X
}

def trouverYBiscuit():Int=
{
  var X = 0
  var Y = 0
  while ((X,Y)!=(getMondeLargeur()-1,getMondeHauteur()-1) && !aBiscuit(X,Y))
         {
           if (X<getMondeLargeur()-1)
           {
             X+=1
           }
           else
           {
             X=0
             Y+=1
           }
         }
  return Y
}

def numeroterLesCases(X:Int, Y:Int, cpt : Int)
{
  if (!aMurNord(X,Y) && getIndication(X,Y)>cpt && Y>0)
  {
    numeroterLesCases(X,Y-1)
  }
  if (!aMurOuest(X,Y) && getIndication(X,Y)>cpt && X>0)
  {
    numeroterLesCases(X-1,Y)
  }
}